--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,11 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
