try to slowly uncurse/unbreak this build process

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,6 @@ name: Download dependencies and build a combined, minified source for release
 
 on:
   push:
-    branches:
-      - main
 
 jobs:
   build:
@@ -16,6 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+          mkdir lib dist
           mv node_modules/dexie/dist/dexie.js lib/dexie.js
           mv node_modules/dexie-export-import/dist/dexie-export-import.js lib/dexie-export-import.js
           mv node_modules/downloadjs/download.js lib/download.js
@@ -24,25 +23,8 @@ jobs:
         run: |
           npm run build
 
-      - name: Remove node_modules
-        run:
-          rm -rf node_modules
-
-      - name: Commit source to main branch
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          echo `date` > .last_built_on
-          git add . -A
-          git commit -m "Minify and combine dependencies as of $(date +%s)."
-          git push
-
-      - name: Commit minified dependencies to release branch
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git fetch
-          git checkout release
-          git checkout ${GITHUB_REF##*/} dist/yomichan-data-exporter.min.js .last_built_on
-          git commit -am "Release minified and combined dependencies as of $(date +%s)."
-          git push origin release
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: dist/yomichan-data-exporter.min.js
